--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.6" }
+warp = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["full"] }
 futures = "0.3"
